CSS fix z-index

--- a/datepicker.css
+++ b/datepicker.css
@@ -5,7 +5,7 @@
  * ========================================================= */
 
 .bs-sc-datepicker.dropdown-menu {
-	max-width: inherit;
+max-width: inherit;
 }
 .bs-sc-datepicker {
 top: 0;
@@ -15,6 +15,7 @@ margin-top: 1px;
 -webkit-border-radius: 4px;
 -moz-border-radius: 4px;
 border-radius: 4px;
+z-index: 1051;
 }
 .bs-sc-datepicker:before {
 content: '';
@@ -42,7 +43,7 @@ width: 100%;
 margin: 0;
 }
 .bs-sc-datepicker th {
-	border-bottom: 1px solid #efefef;
+border-bottom: 1px solid #efefef;
 }
 .bs-sc-datepicker td, .bs-sc-datepicker th {
 text-align: center;
